score/testdata/route-targets-service-no-port-ok.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console
spec:
  host: console-openshift-console.apps.xyz01.example.com
  to:
    kind: Service
    name: console
    weight: 100
  wildcardPolicy: None
---
kind: Service
apiVersion: v1
metadata:
  name: console
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
